<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.ClienteActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/txtNomeCliente"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/nome_cliente"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtNomeCliente"
            android:layout_width="354dp"
            android:layout_height="53dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/txtNomeCliente"
            app:layout_constraintTop_toBottomOf="@+id/txtNomeCliente" />

        <TextView
            android:id="@+id/txtSobrenomeCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sobrenome_cliente"
            app:layout_constraintStart_toStartOf="@+id/edtNomeCliente"
            app:layout_constraintTop_toBottomOf="@+id/edtNomeCliente" />

        <EditText
            android:id="@+id/edtSobrenome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/txtSobrenomeCliente"
            app:layout_constraintTop_toBottomOf="@+id/txtSobrenomeCliente" />

        <TextView
            android:id="@+id/txtIdadeNasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/idade_nasc_cliente"
            app:layout_constraintStart_toStartOf="@+id/edtSobrenome"
            app:layout_constraintTop_toBottomOf="@+id/edtSobrenome" />

        <RadioGroup
            android:id="@+id/rgpGenero"
            android:layout_width="wrap_content"
            android:layout_height="107dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <RadioButton
                android:id="@+id/rdbFeminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genero_feminino" />

            <RadioButton
                android:id="@+id/rdbMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genero_masculino" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/genero"
            app:layout_constraintStart_toStartOf="@+id/edtDataNasc"
            app:layout_constraintTop_toBottomOf="@+id/edtDataNasc" />

        <EditText
            android:id="@+id/edtDataNasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="@+id/txtIdadeNasc"
            app:layout_constraintTop_toBottomOf="@+id/txtIdadeNasc" />

        <Spinner
            android:id="@+id/spnOndeEncontrou"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:entries="@array/onde_me_encontrou"
            app:layout_constraintStart_toStartOf="@+id/txtSpinner"
            app:layout_constraintTop_toBottomOf="@+id/txtSpinner" />

        <TextView
            android:id="@+id/txtSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Onde me Encontrou"
            app:layout_constraintStart_toStartOf="@+id/chkIndicacao"
            app:layout_constraintTop_toBottomOf="@+id/chkIndicacao" />

        <CheckBox
            android:id="@+id/chkIndicacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Indicação"
            app:layout_constraintStart_toStartOf="@+id/rgpGenero"
            app:layout_constraintTop_toBottomOf="@+id/rgpGenero" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="64dp"
            android:text="Salvar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnOndeEncontrou" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="Limpar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnSalvar"
            app:layout_constraintTop_toBottomOf="@+id/spnOndeEncontrou" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
